add the intro class and content

--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
             <a href="#contact">Contact</a>
         </div>
     </header>
+    <div class="intro">
+        <div class="title">
+            <h3>I'm Ajedidah </h3>
+            <p>Freelance Web Designer and Developer</p>
+            <button>Hire me</button>
+        </div>
+            <img src="images/jed.png" alt="Ajedidah">
+            <div class="ellipse"></div>
+    </div>
+
 </body>
 </html>
