patch:change first clas style

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
             <p>Freelance Web Designer and Developer</p>
             <button>Hire me</button>
         </div>
-            <img src="images/jed.png" alt="Ajedidah">
-            <div class="ellipse"></div>
-    </div>
-
+            <img src="images/jed1.png" alt="Ajedidah">
+           
+   
 </body>
 </html>
