add footer section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Ajedidah Mwanzia's Portfolio</title>
+    <script src="https://kit.fontawesome.com/7740ca802f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -121,7 +122,15 @@
                 </div>
          </div>
       
-        
+        <div class="footer"> 
+            <p>Copyright 2021. All rights reserved.</p>
+            <div class="icons">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram-square"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+
+        </div>
    
 </body>
 </html>
